@@ -8,6 +8,7 @@ lldpd (0.7.2)
   * Fixes:
     + Driver whitelisting is done before checking if an interface has
       a lower interface in Linux.
+    + Expire remote ports and chassis in a timely manner.
 
 lldpd (0.7.1)
   * Features
